[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/GUI/SettingsScreen.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
fullScreenButton = NodePath("CanvasLayer/MarginContainer/HBoxContainer/VBoxContainer/FullScreen/CheckBox")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/MarginContainer"]
margin_right = 1024.0
margin_bottom = 600.0

[node name="LeftPadding" type="MarginContainer" parent="CanvasLayer/MarginContainer/HBoxContainer"]
margin_right = 459.0
margin_bottom = 600.0
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MarginContainer/HBoxContainer"]
margin_left = 463.0
margin_right = 561.0
margin_bottom = 600.0
custom_constants/separation = 25

[node name="TopPadding" type="MarginContainer" parent="CanvasLayer/MarginContainer/HBoxContainer/VBoxContainer"]
margin_right = 98.0
margin_bottom = 218.0
size_flags_vertical = 3

[node name="FullScreen" type="HBoxContainer" parent="CanvasLayer/MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 243.0
margin_right = 98.0
margin_bottom = 267.0

[node name="CheckBox" type="CheckBox" parent="CanvasLayer/MarginContainer/HBoxContainer/VBoxContainer/FullScreen"]
margin_right = 24.0
margin_bottom = 24.0

[node name="Label" type="Label" parent="CanvasLayer/MarginContainer/HBoxContainer/VBoxContainer/FullScreen"]
margin_left = 28.0
margin_top = 5.0
margin_right = 98.0
margin_bottom = 19.0
text = "Full Screen"

[node name="Save" type="Button" parent="CanvasLayer/MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 292.0
margin_right = 98.0
margin_bottom = 312.0
text = "Save"

[node name="Cancel" type="Button" parent="CanvasLayer/MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 337.0
margin_right = 98.0
margin_bottom = 357.0
text = "Cancel"

[node name="BottomPadding" type="MarginContainer" parent="CanvasLayer/MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 382.0
margin_right = 98.0
margin_bottom = 600.0
size_flags_vertical = 3

[node name="RightPadding" type="MarginContainer" parent="CanvasLayer/MarginContainer/HBoxContainer"]
margin_left = 565.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
[connection signal="toggled" from="CanvasLayer/MarginContainer/HBoxContainer/VBoxContainer/FullScreen/CheckBox" to="." method="_on_CheckBox_toggled"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/HBoxContainer/VBoxContainer/Save" to="." method="_on_Save_pressed"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/HBoxContainer/VBoxContainer/Cancel" to="." method="_on_Cancel_pressed"]
